--- a/kontakt.scss
+++ b/kontakt.scss
@@ -78,7 +78,7 @@ main{
                 margin: 15px auto;
                 &:hover{
                     cursor: pointer;
-                    opacity: .85;
+                    background: #a2bdd8;
                 }
             }
         }
