--- a/main.scss
+++ b/main.scss
@@ -213,7 +213,7 @@ $marginMob: 4%;
                     transition-duration: .2s;
                     text-decoration: none;
                     &:hover{
-                        opacity: .85;
+                        background: #a2bdd8;
                     }
                 }
             }
